// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> renders default 1`] = `
.c0 {
  padding: 0.5rem;
  font-size: 1.3rem;
  font-family: 'Noto Sans HK',sans-serif;
  color: #000;
  text-decoration: none;
}

<a
  className="c0"
  fontSize="1.3rem"
  href="/"
  onClick={[Function]}
/>
`;

exports[`<Link /> renders with theme 1`] = `
.c0 {
  padding: 0.5rem;
  font-size: 1.3rem;
  font-family: 'Noto Sans HK',sans-serif;
  color: #fff;
  text-decoration: none;
}

<a
  className="c0"
  fontSize="1.3rem"
  href="/"
  onClick={[Function]}
/>
`;

exports[`<LinkA /> renders default 1`] = `
.c0 {
  display: block;
  font-size: 1.2rem;
  font-family: 'Noto Sans HK',sans-serif;
  color: #000;
  text-decoration: none;
  cursor: pointer;
}

<a
  className="c0"
/>
`;

exports[`<LinkA /> renders with theme 1`] = `
.c0 {
  display: block;
  font-size: 1.2rem;
  font-family: 'Noto Sans HK',sans-serif;
  color: #fff;
  text-decoration: none;
  cursor: pointer;
}

<a
  className="c0"
/>
`;

exports[`renders default <HeaderLink /> 1`] = `
.c0 {
  padding: 0.5rem;
  font-size: 1.3rem;
  font-family: 'Noto Sans HK',sans-serif;
  color: #000;
  text-decoration: none;
}

.c1 {
  margin: 0.5rem;
  font-weight: 700;
  font-size: 2rem;
}

<a
  className="c0 c1"
  fontSize="1.3rem"
  href="/"
  onClick={[Function]}
/>
`;
